Bug 1059498 - Use the inner dirty rect for the display items inside the SVG filter stacking context. r=roc, a=lmandel * * * Bug 1062870 - Restore the post-filter dirtyRect after building the filtered display items. r=roc